# spocu-pytorch

./: LICENSE.md  README.md  setup.cfg  spocu.py  spocu_pytorch.py  spocu_tensorflow.py
tests/: spocu_test.py
