[metadata]
# replace with your username:
name = spocu
version = 0.0.1
author = Francisco Carrillo Pérez
author_email = carrilloperezfrancisco@protonmail.com
description = Spocu activation function in Pytorch and Tensorflow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pacocp/spocu-pytorch
project_urls =
    Bug Tracker = https://github.com/pacocp/spocu-pytorch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
